# doc/api.yml
@@ -9,6 +9,8 @@ servers: []
 tags:
   - name: user
     description: Operations about user
+  - name: task
+    description: Operations with tasks
 paths:
   /user:
     post:
@@ -33,7 +35,7 @@ paths:
         '5XX':
           description: Internal server error
   /user/login:
-    post:
+    get:
       tags:
         - user
       summary: Log user into the system and returns auth cookie
@@ -50,15 +52,15 @@ paths:
           description: >
             Successfully authenticated.
             The session ID is returned in a cookie named `JSESSIONID`. You need to include this cookie in subsequent requests.
-          headers: 
+          headers:
             Set-Cookie:
-              schema: 
+              schema:
                 type: string
         '400':
           description: Invalid username/password supplied
         '5XX':
           description: Internal server error
-  '/user/{login}':
+  /user/{login}:
     put:
       tags:
         - user
@@ -72,6 +74,13 @@ paths:
           required: true
           schema:
             type: string
+      requestBody:
+        required: true
+        description: Updated user object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserData'
       responses:
         '200':
           description: User info successfully updated
@@ -79,17 +88,175 @@ paths:
           description: Invalid user data supplied
         '401':
           description: Access token is missing or invalid
+        '403':
+          description: Trying to update another user data
         '5XX':
           description: Internal server error
+      security:
+        - cookieAuth: []
+  /task:
+    post:
+      tags:
+        - task
+      summary: Create task
+      description: Create task by description and status
+      operationId: CreateTask
       requestBody:
+        required: true
+        description: A JSON object containing task description and status.
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserData'
-        description: Updated user object
-        required: true
+              $ref: '#/components/schemas/Task'
+      responses:
+        '201':
+          description: Task successfully created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskCreds'
+        '400':
+          description: Invalid task data supplied
+        '401':
+          description: Access token is missing or invalid
+        '403':
+          description: Trying to create task under other username
+        '5XX':
+          description: Internal server error
       security:
         - cookieAuth: []
+  /task/{id}:
+    put:
+      tags:
+        - task
+      summary: Update task
+      description: Update task description or/and status by id, empty fields won't be updated
+      operationId: UpdateTask
+      parameters:
+        - name: id
+          in: path
+          description: task id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        description: A JSON object containing task description and status.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Task'
+      responses:
+        '200':
+          description: Task successfully updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Empty'
+        '400':
+          description: Invalid task data supplied
+        '401':
+          description: Access token is missing or invalid
+        '403':
+          description: Trying to access other user task
+        '5XX':
+          description: Internal server error
+      security:
+        - cookieAuth: []
+    delete:
+      tags:
+        - task
+      summary: Delete task
+      description: Delete task by id
+      operationId: DeleteTask
+      parameters:
+        - name: id
+          in: path
+          description: task id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Task successfully deleted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Empty'
+        '400':
+          description: Task with such id not exists
+        '401':
+          description: Access token is missing or invalid
+        '403':
+          description: Trying to access other user task
+        '5XX':
+          description: Internal server error
+      security:
+        - cookieAuth: []
+    get:
+      tags:
+        - task
+      summary: Get task
+      description: Get task by id
+      operationId: GetTask
+      parameters:
+        - name: id
+          in: path
+          description: task id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Successfuly get task
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+        '400':
+          description: Task with such id not exists
+        '401':
+          description: Access token is missing or invalid
+        '403':
+          description: Trying to access other user task
+        '5XX':
+          description: Internal server error
+      security:
+        - cookieAuth: []
+  /task/page:
+    get:
+      tags:
+        - task
+      summary: Get tasks with pagination
+      description: Get tasks by page number and number of tasks in page
+      operationId: GetTasksByPage
+      requestBody:
+        required: true
+        description: A JSON object containing page number and number of tasks in page.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PageRequest'
+      responses:
+        '200':
+          description: Successfuly get list of tasks
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PageResponse'
+        '400':
+          description: Invalid PageRequest
+        '401':
+          description: Access token is missing or invalid
+        '5XX':
+          description: Internal server error
+      security:
+        - cookieAuth: []
+
+
 components:
   schemas:
     LoginRequest:
@@ -114,6 +281,52 @@ components:
           format: email
         phone:
           type: string
+    Task:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        owner:
+          type: string
+        body:
+          type: string
+        status:
+          type: integer
+          enum: [0, 1, 2, 3]
+          x-enum-varnames: [DEFAULT, OPEN, IN_PROGRESS, COMPLETED]
+    TaskCreds:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        owner:
+          type: string
+    Empty:
+      type: object
+      properties:
+        message:
+          type: string
+    PageRequest:
+      type: object
+      properties:
+        size:
+          type: integer
+          format: int64
+        number:
+          type: integer
+          format: int64
+        owner:
+          type: string
+    PageResponse:
+      type: object
+      properties:
+        tasks:
+          type: array
+          items:
+            $ref: '#/components/schemas/Task'
+
   securitySchemes:
     cookieAuth:
       type: apiKey
