# userservice/main.go
@@ -2,22 +2,30 @@ package main
 
 import (
 	"github.com/gin-gonic/gin"
-	"user_service/controllers"
-	"user_service/db"
-	"user_service/middlewares"
+
+	"userservice/controllers"
+	"userservice/db"
+	"userservice/grpc"
+	"userservice/middlewares"
 )
 
 func main() {
 	db.ConnectToDb()
+	grpc.CreateGRPCClient()
+
 	r := gin.Default()
 
+	// User methods
 	r.POST("/user", controllers.CreateUser)
-
-	r.POST("/user/login", gin.BasicAuth(gin.Accounts{
-		"admin": "secret",
-	}), controllers.LoginUser)
-
+	r.GET("/user/login", controllers.LoginUser)
 	r.PUT("/user/:login", middlewares.IsAuthorized, controllers.UpdateUser)
+
+	// Task methods
+	r.POST("/task", middlewares.IsAuthorized, controllers.CreateTask)
+	r.PUT("/task/:id", middlewares.IsAuthorized, controllers.UpdateTask)
+	r.DELETE("/task/:id", middlewares.IsAuthorized, controllers.DeleteTask)
+	r.GET("/task/:id", middlewares.IsAuthorized, controllers.GetTask)
+	r.GET("/task/page", middlewares.IsAuthorized, controllers.GetTasksByPage)
 
 	r.Run()
 }
